--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.x.x",
     "axios": "^0.21.1",
     "openai": "^4.0.0",
+    "lucide-react": "^0.378.0",
     "framer-motion": "^11.0.0"
 
   },
